# rst_include

./: .coveragerc  .gitignore  .rotekignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  __init__.py  build_docs.cmd  build_docs.py  build_docs.sh  build_readme.cmd  build_readme.py  build_readme.sh  conf_res_inc_sample.py  conftest.py  install_wine.sh  install_wine_machine.sh  project_conf.py  pyproject.toml  pytest.ini  requirements.txt  requirements_setup.txt  requirements_test.txt  rst_inc.py  rst_include.ipynb  setup-old.py  setup.cfg  setup.py  stderr.txt  stdout.txt  temp.txt  test.rst  test.txt
.docs/: README_template.rst  badges.rst  badges_project.rst  badges_without_jupyter.rst  commandline_help.rst  commandline_help.txt  contribute.rst  description.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  rst_include_help_include_output.txt  rst_include_help_output.txt  rst_include_parameters.rst  tested_under.rst  try_in_jupyter.rst  usage.rst  usage_commandline_parameter.rst  usage_examples.rst  usage_examples_batch.rst  usage_examples_python.rst  usage_examples_shellscript.rst  usage_include_from_commandline.rst  usage_multiline_text_replacement.rst  usage_rst_file_examples.rst  usage_rst_file_examples_jupyter_include.rst  usage_rst_file_examples_simple_code_include.rst  usage_rst_file_examples_txt_or_rst_include.rst  usage_rst_file_include_parameters.rst
.github/workflows/: python-package.yml
docs/: README_template.rst  README_template_included.rst  README_template_repo_replaced.rst  badges_with_jupyter.rst  badges_without_jupyter.rst  contribute.rst  installation.rst  rst_include_help_include_output.txt  rst_include_help_output.txt  rst_include_help_replace_output.txt  tested_under.rst
rst_include/: __doc__.py  __init__.py  __init__conf__.py  __main__.py  cli_exit_tools.py  main.py  rst_inc.py  rst_include.py  rst_include_cli.py  run_pytest3_mypy_in_a_loop.cmd  version.py
rst_include/libs/: __init__.py  lib_args.py  (+17 more)
tests/: include0.yaml  include1.py  include2.py  lib_bash_functions.sh  lib_test.py  lib_test_compare_results.py  run_pytest3_mypy_on_rnhome_in_a_loop.cmd  run_setup_tests_venv.sh  test1_no_includes_expected_replace.rst  test2_include_samedir_expected.rst  test3_include_subdir_expected.rst  test4_include_nocode_expected.rst  test5_not_supported_template.rst  test6_include_recursion1_template.rst  test6_include_recursion2_template.rst  test6_include_recursion3_template.rst  test_cli.py  test_compare_file_original.txt  test_compare_file_result_different.txt  test_include_files.py
(+34 files in other folders)
